# walk-the-talk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  design.md  design_p1234.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_all.sh
tests/: conftest.py  test_chunker.py  test_extract.py  test_extract_pipeline.py  test_html_loader.py  test_pipeline.py  test_report_builder.py  test_report_scoring.py  test_reports_store.py  test_table_extractor.py  test_verify_agent.py  test_verify_skeleton.py  test_verify_tools.py
tests/extract/: test_extractor.py  test_pipeline.py
tests/fixtures/中芯国际/: 2025.html
tests/ingest/: test_chunker.py  test_html_loader.py  test_pipeline.py  test_reports_store.py  test_table_extractor.py
tests/report/: test_builder.py  test_scoring.py
tests/verify/: test_agent.py  test_pipeline.py  test_rescue.py  test_tools.py
walk_the_talk/: cli.py  config.py
walk_the_talk/core/: __init__.py  enums.py  ids.py  models.py
walk_the_talk/extract/: __init__.py  extractor.py  pipeline.py  postprocess.py  prompts.py
walk_the_talk/ingest/: __init__.py  _bm25.py  _taxonomy.py  chunker.py  embedding.py  financials_store.py  html_loader.py  pipeline.py  reports_store.py  section_canonical.py  table_dom.py  table_extractor.py  taxonomy.py
walk_the_talk/llm/: __init__.py  cache.py  client.py  deepseek.py  retry.py
walk_the_talk/report/: __init__.py  builder.py  highlights.py  scoring.py  sections.py  templates.py
walk_the_talk/verify/: __init__.py  agent.py  pipeline.py  prompts.py  rescue.py  tools.py
